Update Task 1 and Compelete Task 2

--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -18,6 +18,13 @@
             <button type="button" class="task-btn" data-task="sum">Рассчитать</button>
             <div class="task-result"></div>
         </div>
+        <div class="task">
+            <h2 class="task-title">Task 2:</h2>
+            <p class="task-desc">Разбить строку на слова</p>
+            <input type="text" class="task-input"/>
+            <button type="button" class="task-btn" data-task="word">Получить слова</button>
+            <ul class="task-result"></ul>
+        </div>
     </div>
 </body>
 <script src="js/main.js"></script>
