--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -26,7 +26,7 @@
             <ul class="task-result"></ul>
         </div>
         <div class="task">
-            <h2 class="task-title">Task 3:</h2>
+            <h2 class="task-title">Task 3/4:</h2>
             <p class="task-desc">Генерация рандомных чисел от 0 до 10</p>
             <input type="text" class="task-input" placeholder="Сколько чисел?"/>
             <label for="radio1">Массив</label>
@@ -34,7 +34,7 @@
             <label for="radio1">Множество</label>
             <input type="radio" class="type-radio" name="radio1" data-type="map">
             <button type="button" class="task-btn" data-task="random">Сгенерировать</button>
-            <div class="task-result"></div>
+            <ul class="task-result"></ul>
         </div>
     </div>
 </body>
