--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Homework lesson 4</title>
+    <title>Homework 4</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -35,6 +35,13 @@
             <input type="radio" class="type-radio" name="radio1" data-type="map">
             <button type="button" class="task-btn" data-task="random">Сгенерировать</button>
             <ul class="task-result"></ul>
+        </div>
+        <div class="task">
+            <h2 class="task-title">Task 7:</h2>
+            <p class="task-desc">Введите любую сумму денег:</p>
+            <input type="text" class="task-input" placeholder="Вводи по типу (2.12)"/>
+            <button type="button" class="task-btn" data-task="money">Получить деньги</button>
+            <div class="task-result"></div>
         </div>
     </div>
 </body>
