--- a/lesson4/index.html
+++ b/lesson4/index.html
@@ -39,8 +39,16 @@
         <div class="task">
             <h2 class="task-title">Task 7:</h2>
             <p class="task-desc">Введите любую сумму денег:</p>
-            <input type="text" class="task-input" placeholder="Вводи по типу (2.12)"/>
+            <input type="text" class="task-input" placeholder="Вводить по типу (2.12)"/>
             <button type="button" class="task-btn" data-task="money">Получить деньги</button>
+            <div class="task-result"></div>
+        </div>
+        <div class="task">
+            <h2 class="task-title">Task 8:</h2>
+            <p class="task-desc">Через сколько дней "ДР" ?:</p>
+            <label for="date">Дата рождения:</label>
+            <input type="date" name="date" class="task-input" placeholder="Когда день рождения?"/>
+            <button type="button" class="task-btn" data-task="bday">Посчитать</button>
             <div class="task-result"></div>
         </div>
     </div>
