--- a/livesearch/index.html
+++ b/livesearch/index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Live Search</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="app-search">
         <div class="search-box">
             <h2 class="search-title">Live Search</h2>
+            <input type="text" name="search" placeholder="Поиск" data-type="search">
+            <div class="search-data-list"></div>
         </div>
     </div>
 </body>
+<script src="js/main.js"></script>
+<script>
+    LiveSearch.init();
+</script>
 </html>
