--- a/livesearch/index.html
+++ b/livesearch/index.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Live Search</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,500,700" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="app-search">
         <div class="search-box">
-            <h2 class="search-title">Live Search</h2>
-            <input type="text" name="search" placeholder="Поиск" data-type="search">
+            <div class="search-head">
+                <h2 class="search-title">Live Search</h2>
+                <input type="text" name="search" placeholder="Поиск" data-type="search">
+                <div class="search-count"></div>
+            </div>
             <div class="search-data-list"></div>
         </div>
     </div>
