update class Player, CardPack and start game

--- a/cardgame/index.html
+++ b/cardgame/index.html
@@ -24,6 +24,7 @@
             <div class="control-btn">
                     <button class="get-card-btn">Достать карту</button>
                     <button class="stop-card-btn">Хватит</button>
+                    <button class="restart-card-btn">Рестарт</button>
             </div>
         </div>
         <div class="computer-place">
@@ -35,9 +36,8 @@
     </div>
 
 </body>
-
-<script src="js/libs/Player.js"></script>
 <script src="js/libs/CardPack.js"></script>
+<script src="js/libs/Player.js"></script>
 <script src="js/libs/Board.js"></script>
 <script src="js/main.js"></script>
 <script>
