--- a/cardgame/index.html
+++ b/cardgame/index.html
@@ -14,10 +14,10 @@
     <div class="welcome-box">
         <div class="welcome-content">
             <h1 class="welcome-title">Карточная игра <span class="accent-color">21</span></h1>
-            <form class="name-form">
-                <input type="text" class="name-input" placeholder="Введите ваше имя">
-                <button type="button" class="start-game-btn"><i class="material-icons">&#xE146;</i></button>
-            </form>
+            <div class="name-field">
+                <input type="text" class="name-input" placeholder="Введите ваше имя и нажмите Enter">
+                <i class="material-icons">&#xE150;</i>
+            </div>
         </div>
     </div>
     <div class="result-box"></div>
@@ -39,7 +39,11 @@
             <div class="score-box"></div>
         </div>
     </div>
-
+    <div class="option">
+        <p>Выберите</p>
+        <button type="button" data-value="1">1</button>
+        <button type="button" data-value="11">11</button>
+    </div>
 </body>
 <script src="js/classes/CardPack.js"></script>
 <script src="js/classes/Player.js"></script>
