update project with webpack

--- a/cardgame/index.html
+++ b/cardgame/index.html
@@ -45,10 +45,7 @@
         <button type="button" data-value="11">11</button>
     </div>
 </body>
-<script src="js/classes/CardPack.js"></script>
-<script src="js/classes/Player.js"></script>
-<script src="js/classes/Board.js"></script>
-<script src="js/main.js"></script>
+<script src="js/bundle/build.js"></script>
 <script>
     Game.init();
 </script>
